--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,15 @@
 export("%>%")
 export(add_skew)
 export(build_p_table)
+export(get_all_cds)
+export(get_all_coeffs)
 export(get_plant_sad)
 export(sample_fs_long)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
@@ -20,4 +23,6 @@ importFrom(feasiblesads,fill_ps)
 importFrom(feasiblesads,sample_fs)
 importFrom(magrittr,"%>%")
 importFrom(portalr,plant_abundance)
+importFrom(scads,eucl_rows)
+importFrom(scads,legendre_approx)
 importFrom(tidyr,gather)
