--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,18 @@ export("%>%")
 export(add_dis)
 export(add_skew)
 export(build_p_table)
+export(count_below)
 export(get_all_cds)
 export(get_all_coeffs)
+export(get_percentile)
+export(get_percentiles)
 export(get_plant_sad)
 export(sample_fs_long)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
