Set up to run singletons based on rarefaction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(get_percentile)
 export(get_percentiles)
 export(get_plant_sad)
 export(sample_fs_long)
+importFrom(SPECIES,ChaoBunge)
+importFrom(SPECIES,ChaoLee1992)
+importFrom(SPECIES,chao1984)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
@@ -19,9 +22,11 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(e1071,skewness)
