--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,6 @@ export(get_percentile)
 export(get_percentiles)
 export(get_plant_sad)
 export(sample_fs_long)
-importFrom(SPECIES,ChaoBunge)
-importFrom(SPECIES,ChaoLee1992)
-importFrom(SPECIES,chao1984)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
@@ -38,3 +35,4 @@ importFrom(scads,eucl_rows)
 importFrom(scads,legendre_approx)
 importFrom(tidyr,gather)
 importFrom(vegan,diversity)
+importFrom(vegan,estimateR)
